# ClustersFromPointsPlugin

./: .gitignore  CMakeLists.txt  PluginInfo.json  README.md  conanfile.py
.github/workflows/: build.yml
src/: AlgorithmAction.cpp  AlgorithmAction.h  ClustersAction.cpp  ClustersAction.h  ClustersFromPointsDialog.cpp  ClustersFromPointsDialog.h  ClustersFromPointsPlugin.cpp  ClustersFromPointsPlugin.h  ClustersFromPointsPlugin.json  ClustersModel.h  CustomIntervalsExtractor.cpp  CustomIntervalsExtractor.h  CustomIntervalsExtractorSettingsAction.cpp  CustomIntervalsExtractorSettingsAction.h  ExtractMetaDataDialog.cpp  ExtractMetaDataDialog.h  ExtractMetaDataPlugin.cpp  ExtractMetaDataPlugin.h  ExtractMetaDataPlugin.json  Extractor.cpp  Extractor.h  ExtractorAction.cpp  ExtractorAction.h  HistogramExtractor.cpp  HistogramExtractor.h  HistogramExtractorSettingsAction.cpp  HistogramExtractorSettingsAction.h  IdentifierExtractor.cpp  IdentifierExtractor.h  IdentifierExtractorSettingsAction.cpp  IdentifierExtractorSettingsAction.h  IndexExtractor.cpp  IndexExtractor.h  IndexExtractorSettingsAction.cpp  IndexExtractorSettingsAction.h  IntervalExtractor.cpp  IntervalExtractor.h  IntervalExtractorSettingsAction.cpp  IntervalExtractorSettingsAction.h  IntervalsExtractor.cpp  (+13 more)
